<resources>
    <string name="app_name">Fork</string>
    <string name="placeholder">placeholder</string>
    <string name="modifications_label">Modifications Available:</string>
    <string name="modifications_placeholder">GF, V</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="filter_button">Filter Button</string>
    <string name="sort_button">Sort Button</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions">Instructions</string>
    <string name="submit_recipe">Submit Recipe</string>
</resources>