<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/search_bar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="7dp"
        android:autofillHints="Search"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/search"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:duplicateParentState="true"
        android:drawableEnd="@drawable/ic_baseline_search_24"/>


    <LinearLayout
        android:id="@+id/sort_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_search">

        <ImageView
            android:id="@+id/filter_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/filter_button"
            android:src="@drawable/ic_filter" />

        <ImageView
            android:id="@+id/sort_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sort_button"
            android:src="@drawable/ic_baseline_sort_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>